<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="akiko23_text_time_pattern">Current date: %s</string>
    <string name="akiko23_text_time_from_reboot_pattern">Time from start: %s</string>
    <string name="akiko23_open_canvas">Открыть экран для рисования</string>
    <string name="akiko23_canvas_title">Рисование</string>
    <string name="akiko23_canvas_description">Рисуйте пальцем или включите ластик, чтобы стирать.</string>
    <string name="akiko23_mode_draw">Рисовать</string>
    <string name="akiko23_mode_erase">Стирать</string>
    <string name="akiko23_clear">Очистить холст</string>
    <string name="akiko23_show_cat">Показать кота</string>
    <string name="akiko23_title">Волчьи цитаты</string>
    <string name="akiko23_description">Приложение, которое показывает цитату и фото философа который ее сказал</string>
    <string name="akiko23_show_quote">Показать цитату</string>
</resources>

